--- a/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -42,12 +42,13 @@
                                 </subviews>
                             </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="ATA-dG-bWk">
-                                <rect key="frame" x="16" y="172" width="320" height="320"/>
+                                <rect key="frame" x="16" y="172" width="358" height="360"/>
                                 <gestureRecognizers/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="320" id="Fm0-Xn-eUz"/>
-                                    <constraint firstAttribute="width" secondItem="ATA-dG-bWk" secondAttribute="height" multiplier="1:1" id="jyL-Hn-d12"/>
-                                    <constraint firstAttribute="width" constant="320" id="zUH-tB-UVd"/>
+                                    <constraint firstAttribute="width" constant="358" id="3hc-DN-gAk"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="360" id="Yea-Pb-sbk"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="360" id="cit-Jm-YSD"/>
+                                    <constraint firstAttribute="width" secondItem="ATA-dG-bWk" secondAttribute="height" multiplier="1:1" constant="-2" id="lFg-2Q-AaZ"/>
                                 </constraints>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="R1K-8U-hv6" appends="YES" id="rRA-3l-UzA"/>
