--- a/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ZfO-Ac-no8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="65I-wg-PF0">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Meal Table View Controller-->
+        <!--Your Meals.-->
         <scene sceneID="lNF-kH-drH">
             <objects>
                 <tableViewController id="ZfO-Ac-no8" customClass="MealTableViewController" customModule="FoodTracker" customModuleProvider="target" sceneMemberID="viewController">
@@ -53,35 +53,36 @@
                             <outlet property="delegate" destination="ZfO-Ac-no8" id="zur-oo-rLg"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Your Meals." id="v21-zO-8T2">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="kyu-zb-vxr">
+                            <connections>
+                                <segue destination="BYZ-38-t0r" kind="show" id="YCc-RK-AFr"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8oS-qG-shI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-795.38461538461536" y="31.990521327014218"/>
+            <point key="canvasLocation" x="133.84615384615384" y="31.990521327014218"/>
         </scene>
-        <!--View Controller-->
+        <!--Meal View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FoodTracker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MealViewController" customModule="FoodTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4Rm-Sf-xtd">
-                                <rect key="frame" x="16" y="63.999999999999993" width="358" height="100.33333333333331"/>
+                                <rect key="frame" x="16" y="108" width="358" height="72"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l4v-AG-aiD">
-                                        <rect key="frame" x="0.0" y="0.0" width="85.666666666666671" height="20.333333333333332"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="먹은 음식을 입력하세요." textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="q75-fQ-2s6">
-                                        <rect key="frame" x="0.0" y="28.333333333333329" width="161" height="34"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="161" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D6z-5F-wVK">
-                                        <rect key="frame" x="0.0" y="70.333333333333343" width="151" height="30"/>
+                                        <rect key="frame" x="0.0" y="42" width="151" height="30"/>
                                         <state key="normal" title="Set Default Label Text">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
@@ -92,7 +93,7 @@
                                 </subviews>
                             </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="ATA-dG-bWk">
-                                <rect key="frame" x="16" y="172" width="358" height="360"/>
+                                <rect key="frame" x="16" y="187.66666666666663" width="358" height="360"/>
                                 <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="358" id="3hc-DN-gAk"/>
@@ -128,8 +129,8 @@
                             <constraint firstItem="ATA-dG-bWk" firstAttribute="top" secondItem="4Rm-Sf-xtd" secondAttribute="bottom" constant="7.6666666666666856" id="y8t-gG-hAb"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="E1Z-Ac-WDT"/>
                     <connections>
-                        <outlet property="mealNameLabel" destination="l4v-AG-aiD" id="jUs-ff-3lw"/>
                         <outlet property="nameTextField" destination="q75-fQ-2s6" id="LIn-EW-PHX"/>
                         <outlet property="photoImageView" destination="ATA-dG-bWk" id="F56-hg-F2S"/>
                     </connections>
@@ -141,7 +142,25 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="44.615384615384613" y="31.990521327014218"/>
+            <point key="canvasLocation" x="973.84615384615381" y="31.990521327014218"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="CJP-ca-Nip">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="65I-wg-PF0" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0Gn-Ph-uFb">
+                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ZfO-Ac-no8" kind="relationship" relationship="rootViewController" id="xps-Nl-9Ta"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NEN-oC-Tx2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-795.38461538461536" y="31.990521327014218"/>
         </scene>
     </scenes>
     <resources>
